New Crowdin translations (#915)

--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -150,15 +150,18 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="alternative_naming">نامگذاری جایگزین</string>
     <string name="empty_file">Prazna datoteka</string>
     <string name="break_page_pdf_print">Prekid stranice (PDF/printanje)</string>
+    <string name="underline">خط زیر</string>
     <string name="underline_hex_color_wether_or_not_to_description__appspecific">کد های رنگی بر اساس رنگشان زیرخط‌ دار بشوند یا نه</string>
     <string name="underline_hex_color_codes">زیر خط دار کردن کد های رنگی</string>
     <string name="insert_current_date_when_starting_new_task">هنگامی که کار جدید ثبت می‌کنم تاریخ امروز را وارد کن</string>
     <string name="tasks_with_todays_date">کارها با تاریخ امروز</string>
     <string name="append_contexts_and_projects">بعد از اینکه پرونده بارگزاری شد، موقعیت مکان‌نما در انتهای پرونده قرار بگیرد</string>
+    <string name="append_contexts_and_projects_on_end_of_task">پیوست متن‌ها و پروژه‌ها در پایان کار، هنگامی که از میان‌بر متنی مناسب استفاده می‌کنید</string>
     <string name="rtl_rendering">رندر راست به چپ</string>
     <string name="highlight_line_ending">رنگی کردن پایان خطوط</string>
     <string name="highlight_line_ending_if_two_or_more_spaces">فاصله‌های پایان خطوط را رنگی می‌کند</string>
     <string name="use_monospace_for_code">از فونت monospace برای کد استفاده کنید</string>
+    <string name="disable_code_block_highlight">غیرفعال کردن هایلایت کردن بلوک‌های کد</string>
     <string name="use_different_fonttype_slow_down">از یک نوع فونت دیگر استفاده کنید. تغییر آن به صورت پویا بر عملکرد اپ تاثیر می گذارد.</string>
     <string name="general">عمومی</string>
     <string name="resources">منابع</string>
@@ -169,6 +172,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="special_key">کلید ویژه</string>
     <string name="key_page_up">بالا بردن صفحه (Page Up)</string>
     <string name="key_page_down">پایین بردن صفحه (Page Down)</string>
+    <string name="move_text_one_line_up">متن رو یک خط ببر بالا</string>
+    <string name="move_text_one_line_down">متن رو یک خط ببر پایین</string>
     <string name="key_pos_1">ابتدای خط (کلید Home)</string>
     <string name="key_pos_end">انتهای خط (کلید End)</string>
     <string name="key_pos_1_document">آغاز پرونده</string>
@@ -176,6 +181,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_ctrl_a">انتخاب همه (Ctrl + A)</string>
     <string name="start_on_bottom">شروع از پایین</string>
     <string name="start_on_bottom_when_loading_document">بعد از اینکه پرونده بارگزاری شد، موقعیت مکان‌نما در انتهای پرونده قرار بگیرد</string>
+    <string name="unordered_list_character">کاراکتر لیست بدون ترتیب</string>
+    <string name="character_to_start_items_of_unordered_list_with">از کدوم کاراکتر برای مشخص کردن لیست‌های بدون ترتیب استفاده شود</string>
+    <string name="unordered_list_char_dash">خط فاصله (-)</string>
+    <string name="unordered_list_char_asterisk">ستاره (*)</string>
+    <string name="unordered_list_char_plus">مثبت (+)</string>
+    <string name="filemanager_doesnot_supply_required_data__appspecific">مارکور فقط می‌تواند فایل‌هایی را ویرایش کند که محلی هستند و به صورت آفلاین در دسترس هستند و فایل منیجر‌هایی را که مسیر کامل فایل را نمی‌دهند را ساپورت نمی‌کند.</string>
     <string name="configure_in_the_apps_settings">پیکربندی در تنظیمات برنامه‌ها</string>
     <string name="default_">پیش‌فرض</string>
     <string name="left">چپ</string>
