New Crowdin translations (#929)

--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -28,6 +28,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="create_new_document">Dokumentum létrehozása</string>
     <string name="move">Mozgatás</string>
     <string name="info">Infó</string>
+    <string name="file_folder_already_exists_please_use_a_different_name">A fájl már létezik! Változtasd meg a nevet!</string>
     <string name="import_from_device">Importálás az eszközről</string>
     <string name="import_">Importálás</string>
     <string name="append_to_witharg">Hozáfűz ehhez: %s</string>
@@ -58,12 +59,16 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="select_entries">Bejegyzések kiválasztása</string>
     <string name="one_item_selected">Egy elem kiválasztva</string>
     <string name="items_selected_witharg" tools:ignore="PluralsCandidate">%d elem kiválasztva</string>
+    <string name="hide_statusbar">Állapotsor elrejtése</string>
     <string name="name">Név</string>
+    <string name="url_or_path">URL / elérési út</string>
     <string name="insert_link">Link beillesztése</string>
     <string name="insert_image">Kép beillesztése</string>
     <string name="contributors">Hozzájárulók</string>
+    <string name="save_location">Mentési hely</string>
     <string name="licenses">Licenszek</string>
     <string name="changelog">Újdonságok</string>
+    <string name="more_info">További információ</string>
     <string name="show_license_of_the_app">GNU GPLv3+ Licenc</string>
     <string name="show_third_party_licenses">3. személytől származó könyvtárak</string>
     <string name="language_change_restart_description">Az alkalmazás nyelvének megváltoztatása. Indítsd újra az alkalmazást, hogy a módosítások érvénybe lépjenek!</string>
@@ -73,8 +78,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="date">Dátum</string>
     <string name="deleteme____1">Név</string>
     <string name="size">Méret</string>
+    <string name="reverse_order">Fordított sorrend</string>
     <string name="contribute">Közreműködés</string>
     <string name="donate">Adományozás</string>
+    <string name="project_page">Projekt oldala</string>
+    <string name="press_back_again_to_exit">Kilépéshez nyomd meg újra a vissza gombot</string>
     <string name="exit">Kilépés</string>
     <string name="undo">Visszavon</string>
     <string name="redo">Újra</string>
@@ -91,19 +99,27 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="sync">Szinkronizálás</string>
     <string name="search_or_custom">Keresés / Egyéni</string>
     <string name="save">Mentés</string>
+    <string name="update">Frissítés</string>
     <string name="clear">Töröl</string>
+    <string name="due_date">Határidő</string>
+    <string name="current_date">Mai dátum</string>
     <string name="archive">Archivál</string>
     <string name="add_task">Teendő hozzáadása</string>
     <string name="add_x_witharg">%s hozzáadása</string>
     <string name="refresh">Frissítés</string>
     <string name="create_shortcut">Parancsikon létrehozása</string>
+    <string name="tried_to_create_shortcut_for_this_notice">Parancsikon létrehozva. Néhány kezdőképernyő ezt nem támogatja.</string>
     <string name="files_and_folders">Fájlok és mappák</string>
     <string name="document_browser">Dokumentum böngésző</string>
     <string name="create_note" needed="false">Jegyzet létrehozása</string>
     <string name="format">Formátum</string>
     <string name="project">Projekt</string>
     <string name="projects">Projektek</string>
+    <string name="categories">Kategóriák</string>
     <string name="none">Semmi</string>
+    <string name="other">Egyebek</string>
+    <string name="empty_file">Üres fájl</string>
+    <string name="underline">Aláhúzott</string>
     <string name="general">Általános</string>
     <string name="key_pos_1_document">Dokumentum eleje</string>
     <string name="key_pos_end_document">Dokumentum vége</string>
@@ -150,4 +166,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="just_date">Csak dátum</string>
     <string name="last_used">Utoljára használt</string>
     <string name="reload">Újratölt</string>
+    <string name="table">Táblázat</string>
+    <string name="how_much_columns_press_table_button_long_to_start_table">Hány oszlop legyen? A táblázat elkezdéséhez (fejléc) hosszan, sor beszúrásához röviden nyomd meg a táblázat gombot.</string>
 </resources>
